# opencv_candidate

./: CHANGELOG.rst  CMakeLists.txt  package.xml  stack.xml
cmake/: depends.cmake.in
include/opencv_candidate/: datamatrix.hpp  feature2d.hpp  lsh.h
include/opencv_candidate_reconst3d/: reconst3d.hpp
include/opencv_creative/: reader.h
src/: CMakeLists.txt
src/creative/: CMakeLists.txt  creative.cpp  main.cpp
src/opencv_candidate/: CMakeLists.txt  datamatrix.cpp  feature2d.cpp  pyopencv_candidate.cpp
src/reconst3d/: CMakeLists.txt  arbitrary_capture.cpp  capture.cpp  graph_optimizations.hpp  graph_se3.cpp  graph_se3_rgbd_icp.cpp  graph_se3_rgbd_icp_model.cpp  load_data.cpp  mask_data.cpp  model.cpp  reconst3d_init.cpp  reconstruction.cpp
src/reconst3d/samples/: arbitrary_model_capture.cpp  circular_model_capture.cpp  cylinder_evaluation.cpp  model_capture.cpp
src/rgbd/: CMakeLists.txt
src/rgbd/include/opencv2/rgbd/: rgbd.hpp
src/rgbd/samples/: model_capture.cpp
src/rgbd/samples/model_capture/: create_optimizer.hpp  frame_to_frame.cpp  graph_se3.cpp  graph_se3_landmarks.cpp  graph_se3_rgbd_icp.cpp  load_data.cpp  mask_data.cpp  model_capture.hpp  model_capture_init.cpp  ocv_pcl_eigen_convert.hpp  show_model.cpp
src/rgbd/samples/reconst3d/: capture.cpp  graph_optimizations.hpp  graph_se3.cpp  graph_se3_rgbd_icp.cpp  graph_se3_rgbd_icp_model.cpp  load_data.cpp  model.cpp  reconst3d.hpp  reconst3d_init.cpp  reconstruction.cpp
src/rgbd/samples/reconst3d/src/: capture.cpp  graph_se3_rgbd_icp.cpp  graph_se3_rgbd_icp_model.cpp  mask_data.cpp  ocv_pcl_convert.hpp
src/rgbd/src/: depth_cleaner.cpp  depth_to_3d.cpp  normal.cpp  odometry.cpp  plane.cpp  rgbd_init.cpp
src/rgbd/test/: test_normal.cpp
